--- a/views/index.jade
+++ b/views/index.jade
@@ -103,6 +103,6 @@ block content
 				button(type="button", class="mdl-button close") OK
 				//button(type="button", class="mdl-button close") Disagree
 
-		script(type='text/javascript', src='/js/index.js')
+		script(type='text/javascript', src='/js/client.js')
 		script(type='text/javascript', src="https://maps.googleapis.com/maps/api/js?key=***REMOVED***&libraries=places&callback=initAutocomplete", async, defer)
 		
