--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,9 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
+  /* background: linear-gradient(90deg, #696969 10%, #ADADAD 90%); */
 }
+
 
 a {
   color: #00B7FF;
