add fb meta tags

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,11 @@ html
 
 		//mobile optimized
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
+		meta(property="og:url", content="http://www.uberordrive.com/")
+		meta(property="og:type", content="website")
+		meta(property="og:title", content="Uber or Drive?")
+		meta(property="og:description", content="Cost of driving compared with realtime fare estimates from Uber")
+		meta(property="og:image", content="images/screen.png")
 
 		//css
 		link(rel='stylesheet', href='/stylesheets/style.css')
