--- a/views/faq.jade
+++ b/views/faq.jade
@@ -10,6 +10,8 @@ block content
 					|Nope. The fare estimates come direct from uber. The site otherwise has no relationship to Uber whatsoever.
 				p <br><strong>How accurate is this thing?</strong><br>
 					|Current traffic conditions are taken into accout while calculating the driving estimate but it might still be off by +/- 10 percent because of other factors that can affect the cost.<br>
-					|The estimates from uber are current and should closely match what you see in Uber's app. 
+					|The estimates from uber are current and should closely match what you see in Uber's app.
+				p<br><strong>What is the point of this?</strong><br>
+					|If you think an Uber is always so much more expensive than driving that comparing the two is almost pointless, you probably live in the west. In other parts of the world cost of labour is relatively cheap and hence ubers cost a lot less. Infact an Uber can sometimes work out to be cheaper than driving yourself. In normal circumstances Uber remains slightly more expensive but if the difference is small it can make driving not worth the hassle.
 			.mdl-cell.mdl-cell--12-col
 				a(href="/") Back
