enable mobile location detection

--- a/views/index.jade
+++ b/views/index.jade
@@ -111,5 +111,5 @@ block content
 				button(type="button", class="mdl-button close") OK
 				//button(type="button", class="mdl-button close") Disagree
 		script(type='text/javascript', src='/js/client.js')
-		script(type='text/javascript', src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnfJIBZj1_q75mLz20h-tSft1gl5SeXFs&libraries=places&callback=initAutocomplete", async, defer)
+		script(type='text/javascript', src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnfJIBZj1_q75mLz20h-tSft1gl5SeXFs&libraries=places&callback=initAutocomplete&sensor=true", async, defer)
 		
