--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,9 +20,9 @@ html
 		link(rel='stylesheet', href='/stylesheets/style.css')
 
 
-		//polyfill (support for dialog)
-		script(src="/bower_components/dialog-polyfill/dialog-polyfill.js")
-		link(rel="stylesheet", type="text/css", href="/bower_components/dialog-polyfill/dialog-polyfill.css")
+		//polyfill (support for dialog) (no longer using dialg so commented out)
+		// script(src="/bower_components/dialog-polyfill/dialog-polyfill.js")
+		// link(rel="stylesheet", type="text/css", href="/bower_components/dialog-polyfill/dialog-polyfill.css")
 
 		| <!--[if IE]> 
 		<script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.2.0/es5-shim.min.js"></script>
@@ -33,7 +33,7 @@ html
 		//material-design-lite
 		link(rel='stylesheet', href='/bower_components/material-design-lite/material.min.css')
 		script(src='/bower_components/material-design-lite/material.min.js')
-		link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
+		link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto:300,400,500,700')
 		
 		//jQuery
 		script(src='/bower_components/jquery/dist/jquery.min.js')
