city autocomplete, refactoring

--- a/views/index.jade
+++ b/views/index.jade
@@ -75,7 +75,8 @@ block content
 									label(class="mdl-radio mdl-js-radio mdl-js-ripple-effect", for="car-codition-2")
 										input(type="radio", id="car-codition-2", class="mdl-radio__button", name="car-codition", value="2")
 										span(class="mdl-radio__label") New
-								.mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
+								.mdl-textfield.mdl-js-textfield
+									p Which city are you in?
 									input(class="mdl-textfield__input", type="text", id="co_city", placeholder="")
 									label(class="mdl-textfield__label", for="co_city") Which city are you in ?
 								.mdl-cell.mdl-cell--8-col								
